feat: add user password operate api (#65)
